--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     Earn Stars, get Rewards
                 </h5>
                 <p class="grid__collum__third__item">
-                    As you earn Stars, you can redeem them for Rewards—like free food, drinks, and more. Start redeeming with as little as 25 Stars!
+                    As you earn Stars, you can redeem them for Rewards—like free food, drinks, and more. Start redeeming with as little as 25 Stars!!
 
 
                 </p>
