modules and tab pop

--- a/index.html
+++ b/index.html
@@ -260,6 +260,8 @@
         
 </main>
     
-    <script src="./main.js"></script>
+<script type="module" src="./javascript/index.js"></script>
+<script src="./javascript/tabsHtmlFunc.js"></script>
+
 </body>
 </html>
